package dmResourceServer;

option java_package = "com.dynamo.cr.proto";
option java_outer_classname = "Config";

message Command
{
    repeated string args = 1;
}

message Application
{
    required string platform = 1;
    required string name = 2;
    required string path = 3;
}

message ProjectTemplate {
    required string id = 1;
    required string path = 2;
    required string description = 3;
}

message Configuration
{
    required int32 service_port = 4;
    optional int32 ssl_service_port = 41;
    optional string keystore = 42;
    optional string keystore_password = 43;
    // Exposed port to the client, i.e. editor
    required int32 git_port = 40;
    required string persistence_unit_name = 6;
    required string repository_root = 7;
    repeated Application applications = 13;
    repeated ProjectTemplate project_templates = 14;
    required string hostname = 17;
    optional int32 max_project_count = 19 [default=10];

    // smtp
    required string smtp_host = 20;
    required string smtp_username = 21;
    required string smtp_password = 22;

    // email
    required EMailTemplate invitation_template = 24;

    // invitations
    repeated InvitationCountEntry invitation_count_map = 25;
    optional string test_registration_key = 26 [default=""];
    optional int32 test_invitation_count = 27 [default=0];

    // signed engines
    required string signed_engine_root = 28;

    // Grizzly test
    optional int32 grizzly_idle_timeout = 35;

    // Max number of users registered until the open registration will be closed
    optional int32 open_registration_max_users = 36 [default=1000];
    optional int32 open_invitation_count = 37 [default=3];
}

message EMailTemplate
{
    required string from = 1;
    required string subject = 2;
    required string message = 3;
}

message InvitationCountEntry
{
    required int32 key = 1;
    required int32 value = 2;
}
